Add make install step

--- a/igsp_web_cookie/defaults/main.yml
+++ b/igsp_web_cookie/defaults/main.yml
@@ -3,3 +3,4 @@ igsp_web_cookie:
   repo: https://github.com/Duke-GCB/igsp_web_cookie.git
   dest: /opt/code/
   version: master
+  install_dir: /var/system/cookied/
