--- a/igsp_web_cookie/defaults/main.yml
+++ b/igsp_web_cookie/defaults/main.yml
@@ -3,7 +3,7 @@ igsp_web_cookie:
   repo: https://github.com/Duke-GCB/igsp_web_cookie.git
   dest: /opt/code/
   version: master
-  install_dir: /var/system/cookied/
+  install_dir: /var/system/cookied
   conf_file: cookied.conf
   owner: "{{ ansible_user_id }}"
 cookied_conf: # This must be overridden, override should be in vault!
