Set packages state to latest
Should update git to a version compatible with smart http transport

--- a/igsp_web_cookie/tasks/main.yml
+++ b/igsp_web_cookie/tasks/main.yml
@@ -3,6 +3,7 @@
   when: ansible_os_family == 'RedHat'
   sudo: yes
   yum: name={{ item }}
+       state=latest
   with_items:
     - git
     - gcc-c++
