WIP on docker-volume-netshare installation
Have daemon installed and started
Placing .netrc file but it's owned by unprivileged user

--- a/docker_volume_netshare/defaults/main.yml
+++ b/docker_volume_netshare/defaults/main.yml
@@ -4,3 +4,9 @@ docker_volume_netshare:
   package: "docker-volume-netshare"
   version: "0.11"
   arch: "amd64"
+  user: "docker"
+  mode: "cifs"
+netrc:
+  machine: ""
+  username: ""
+  password: ""
