--- a/docker_volume_netshare/tasks/main.yml
+++ b/docker_volume_netshare/tasks/main.yml
@@ -5,4 +5,16 @@
     dest="/home/{{ ansible_env.USER }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
 - name: Install docker-volume-netshore Debian
   apt: deb="/home/{{ ansible_env.USER }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
-  sudo: true
+  sudo: yes
+- name: Create a docker user
+  user: name={{ docker_volume_netshare.user }} comment="Docker User" groups=docker shell=/bin/bash
+  sudo: yes
+- name: Place a .netrc file in root's home directory
+  template: src=netrc.j2 dest={{ ansible_env.HOME }}/.netrc mode=0600
+  sudo: yes
+- name: Configure docker-volume-netshare mode
+  lineinfile: "dest=/etc/default/docker-volume-netshare regexp='^DKV_NETSHARE_OPTS' line='DKV_NETSHARE_OPTS=\"{{ docker_volume_netshare.mode }}\"'"
+  sudo: yes
+- name: Install docker-volume-netshare service
+  service: name="docker-volume-netshare" state=restarted enabled=yes
+  sudo: yes
