Updates docker-volume playbook
- Uses ansible_env.HOME instead of /home/{USER}
- Removes sudo from individual steps as the playbook now sets become: yes
- Removes creation of docker user, since this is outside the scope of installing the service
- Installs cifs-utils or nfs-common as approriate
- Places .netrc in /

--- a/docker_volume_netshare/tasks/main.yml
+++ b/docker_volume_netshare/tasks/main.yml
@@ -2,19 +2,18 @@
 - name: Download docker-volume-netshare Debian package
   get_url:
     url="{{ docker_volume_netshare.baseurl }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
-    dest="/home/{{ ansible_env.USER }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
+    dest="{{ ansible_env.HOME }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
 - name: Install docker-volume-netshore Debian
-  apt: deb="/home/{{ ansible_env.USER }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
-  sudo: yes
-- name: Create a docker user
-  user: name={{ docker_volume_netshare.user }} comment="Docker User" groups=docker shell=/bin/bash
-  sudo: yes
-- name: Place a .netrc file in root's home directory
-  template: src=netrc.j2 dest={{ ansible_env.HOME }}/.netrc mode=0600
-  sudo: yes
+  apt: deb="{{ ansible_env.HOME }}/{{ docker_volume_netshare.package }}_{{ docker_volume_netshare.version }}_{{ docker_volume_netshare.arch }}.deb"
+- name: Install cifs-utils
+  apt: name=cifs-utils
+  when: docker_volume_netshare.mode == 'cifs'
+- name: Install NFS
+  apt: name=nfs-common
+  when: docker_volume_netshare.mode == 'nfs'
+- name: Place a .netrc file in /
+  template: src=netrc.j2 dest=/.netrc mode=0600
 - name: Configure docker-volume-netshare mode
   lineinfile: "dest=/etc/default/docker-volume-netshare regexp='^DKV_NETSHARE_OPTS' line='DKV_NETSHARE_OPTS=\"{{ docker_volume_netshare.mode }}\"'"
-  sudo: yes
 - name: Install docker-volume-netshare service
   service: name="docker-volume-netshare" state=restarted enabled=yes
-  sudo: yes
