--- a/auth/tasks/main.yml
+++ b/auth/tasks/main.yml
@@ -12,11 +12,37 @@
     - sssd-krb5
     - pam_krb5
 
+- name: Create cacert directory
+  file:
+    path: /etc/openldap/cacerts
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+
+- name: Copy OpenLDAP cert
+  copy:
+    src: idms-authdir.pem
+    dest: /etc/openldap/cacerts/idms-authdir.pem
+    owner: root
+    group: root
+    mode: 622
+
+- name: Rehash OpenLDAP Cacerts
+  command: >
+    cacertdir_rehash /etc/openldap/cacerts
+
 - name: Setup auth
   command: >
-     authconfig --enableldap --enablesssd --enablekrb5
-     --krb5kdc=kaserv1.acpub.duke.edu:88 
-     --krb5adminserver=kaserv1.acpub.duke.edu:749
-     --enablelocauthorize --enableshadow --passalgo=md5
-     --ldapserver=ldaps001.igsp.duke.edu
-     --ldapbasedn='dc=cagp,du=duke,dc=edu' --enableldaptls
+     authconfig --enablesssd --enablesssdauth --disableldap --disableldapauth --disablekrb5 --update
+
+- name: Copy sssd conf
+  action: template src=sssd.j2 dest=/etc/sssd/sssd.conf
+    owner: root
+    group: root
+    mode: 0600
+
+- name: Reload sssd
+  service:
+    name: sssd
+    state: restarted
