Huge refactoring of roles and some splitting up of vars and tasks.
Moved a few roles into common since they are always needed. Started to
break out yum packages into vars. Started using handlers in some of the
hpc and common roles.

--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -3,56 +3,12 @@
 
 - include_vars: rhn_credentials.yml
 
-- name: duke-centos-oit install
+- include: repos.yml
   become: yes
-  become_method: sudo
-  copy: src=duke-centos-oit.repo
-        dest=/etc/yum.repos.d/
-        owner=root group=root mode=0644
-
-- name: CentOS base repo
-  become: yes
-  become_method: sudo
-  copy: src=CentOS-Base.repo
-        dest=/etc/yum.repos.d/
-        owner=root group=root mode=0644
-
-- name: duke repository enable
-  become: yes
-  become_method: sudo
-  ini_file: dest=/etc/yum.repos.d/duke-centos-oit.repo
-            section=duke-centos-oit
-            option=enabled
-            value=1
-
-- name: CentOS base enable
-  become: yes
-  become_method: sudo
-  ini_file: dest=/etc/yum.repos.d/CentOS-Base.repo
-            section=base
-            option=enabled
-            value=1
-
-- name: CentOS updates enable
-  become: yes
-  become_method: sudo
-  ini_file: dest=/etc/yum.repos.d/CentOS-Base.repo
-            section=updates
-            option=enabled
-            value=1
-
-- name: CentOS extras enable
-  become: yes
-  become_method: sudo
-  ini_file: dest=/etc/yum.repos.d/CentOS-Base.repo
-            section=extras
-            option=enabled
-            value=1
 
 - name: Register RHN
   when: ansible_distribution == 'Red Hat Enterprise Linux'
   become: yes
-  become_method: sudo
   rhn_register: state=present username={{ rhn.username }} password={{ rhn.password }}
 
 - name: Package update
@@ -66,10 +22,7 @@
   become: yes
   become_method: sudo
   yum: name={{ item }} state=present
-  with_items:
-    - ntp
-    - krb5-workstation 
-    - zsh
+  with_items: "{{ base_packages }}"
 
 - name: Reboot
   become: yes
