--- a/common/tasks/auth.yml
+++ b/common/tasks/auth.yml
@@ -1,17 +1,5 @@
 ---
 
-- name: Install auth packages
-  #TODO separate into yum and apt for distros
-  yum: name={{ item }}
-  with_items:
-    - sssd
-    - openldap-clients
-    - nscd
-    - nss-pam-ldapd
-    - krb5-workstation
-    - sssd-krb5
-    - pam_krb5
-
 - name: Create cacert directory
   file:
     path: /etc/openldap/cacerts
@@ -19,6 +7,8 @@
     owner: root
     group: root
     mode: 0755
+    force: no
+    notify: Rehash OpenLDAP Cacerts
 
 - name: Copy OpenLDAP cert
   copy:
@@ -27,10 +17,8 @@
     owner: root
     group: root
     mode: 622
-
-- name: Rehash OpenLDAP Cacerts
-  command: >
-    cacertdir_rehash /etc/openldap/cacerts
+    force: no
+    notify: Rehash OpenLDAP Cacerts
 
 - name: Setup auth
   command: >
@@ -38,8 +26,4 @@
 
 - name: Copy sssd conf
   action: template src=sssd.j2 dest=/etc/sssd/sssd.conf owner=root group=root mode=0600
-
-- name: Reload sssd
-  service:
-    name: sssd
-    state: restarted
+  notify: Reload sssd
