Got helmod task unbundled from the hpc role
Tested out using the helmod role to provision access to lmod on
schultz server. Needed to remove one step from the tasks that was
specific to hardac systems and gpfs.

--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -31,6 +31,8 @@
   async: 1
   poll: 0
   ignore_errors: true
+  tags:
+    - reboot
 
 - name: Waiting for server to come back
   local_action: wait_for delay=15 host={{ inventory_hostname }}
