--- a/hpc/tasks/main.yml
+++ b/hpc/tasks/main.yml
@@ -110,3 +110,8 @@
 - name: enable slurm service startup
   service: name=slurm state=started enabled=yes
 
+- name: Create links for helmod
+  file:
+    path: /gpfs/fs0/data/itlab
+    dest: /nfs/software
+    state: link
