--- a/helmod/tasks/main.yml
+++ b/helmod/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Install lmod dependencies
   yum: name={{ item }} state=present
   with_items:
+    - zsh
     - lua
     - lua-filesystem
     - lua-posix
@@ -12,17 +13,12 @@
     path: /nfs
     state: directory
     mode: 0755
-  
-- name: Create links for helmod
-  file:
-    src: /gpfs/fs0/data/itlab
-    dest: /nfs/software
-    state: link
+
+- name: Copy bash profile
+  template: src=lmod.sh.j2 dest=/etc/profile.d/lmod.sh owner=root mode=0644
 
 - name: Copy bash and csh profiles
-  copy: src={{ item }} dest=/etc/profile.d/ owner=root mode=0644
-  with_fileglob:
-      - "roles/helmod/files/lmod.*"
+  template: src=lmod.csh.j2 dest=/etc/profile.d/lmod.csh owner=root mode=0644
 
 - name: Copy zsh site-functions
   copy: src={{ item }} dest=/usr/share/zsh/site-functions/ owner=root mode=0644
