--- a/imads_webapp/tasks/setup_portal.yml
+++ b/imads_webapp/tasks/setup_portal.yml
@@ -2,10 +2,10 @@
 
 - name: Create web portal container
   docker:
-    image: dukegcb/tf-dna-predictions-apache
+    image: dukegcb/imads-apache
     name: web
-    net: "{{ tf_dna_predictions.network }}"
-    env: "{{ tf_dna_predictions.env }}"
+    net: "{{ imads.network }}"
+    env: "{{ imads.env }}"
     volumes:
       - /etc/external/:/etc/external/
       - /pred_data:/tmp/pred_data
