--- a/imads_webapp/tasks/setup_worker.yml
+++ b/imads_webapp/tasks/setup_worker.yml
@@ -6,8 +6,8 @@
   docker:
     name: worker
     image: dukegcb/predict-tf-binding-worker
-    net: "{{ tf_dna_predictions.network }}"
-    env: "{{ tf_dna_predictions.env }}"
+    net: "{{ imads.network }}"
+    env: "{{ imads.env }}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
