Updates imads playbook for RedHat deployment
- Tested on CentOS 7 under vagrant
- requires RDI2.docker from ansible-galaxy
- Fixes indentation issue in setup_worker
- Removes unnecessary python_https_fixes

--- a/imads_webapp/tasks/main.yml
+++ b/imads_webapp/tasks/main.yml
@@ -1,4 +1,6 @@
-- include: tasks/python_https_fixes.yml
+- name: Install docker py on RedHat
+  yum: name=python-docker-py
+  when: ansible_os_family == "RedHat"
 
 - name: Creates predictions data directory shared by portal and worker
   file: path=/pred_data state=directory
