--- a/imads_webapp/tasks/setup_worker.yml
+++ b/imads_webapp/tasks/setup_worker.yml
@@ -22,14 +22,14 @@
   get_url:
     url: "https://raw.githubusercontent.com/Duke-GCB/TrackHubGenerator/master/yaml/tracks/{{ item }}"
     dest: "/pred_data/models/"
-    with_items:
-      - "tracks-predictions.yaml"
-      - "tracks-preferences.yaml"
+  with_items:
+    - "tracks-predictions.yaml"
+    - "tracks-preferences.yaml"
 
 # Using command-line docker pull here because ansible docker_image module is unpredictable.
 # Version 2.0 fails if there are any untagged docker images. 2.1 appears to fix
 # but would require a force flag to fetch updates, which shouldn't be necessary
 - name: Pull latest predictions docker image
   command: docker pull dukegcb/predict-tf-binding:latest
-- name: Pull latest predictions docker image
-  command: docker pull dukegcb/predict-tf-preferences:latest
+- name: Pull latest preferences docker image
+  command: docker pull dukegcb/predict-tf-preference:latest
