Temporarily change imads load.py to download

--- a/imads_webapp/tasks/main.yml
+++ b/imads_webapp/tasks/main.yml
@@ -29,7 +29,7 @@
     image: dukegcb/imads
     net: "{{ imads.network }}"
     env: "{{ imads.env }}"
-    command: python load.py all
+    command: python load.py download
     detach: False
     volumes:
       - /etc/external/:/etc/external/
