--- a/imads_webapp/tasks/setup_postgres.yml
+++ b/imads_webapp/tasks/setup_postgres.yml
@@ -3,7 +3,7 @@
 - name: Setup loading postgres configuration
   when: "'{{db_config}}' == 'load'"
   blockinfile:
-    dest: /var/lib/postgresql/data/postgresql.conf
+    dest: "{{ imads.data_root }}/var/lib/postgresql/data/postgresql.conf"
     marker: "# {mark} ANSIBLE MANAGED BLOCK"
     content: |
       maintenance_work_mem = 2048MB
@@ -12,7 +12,7 @@
 - name: Setup production postgres configuration (1/4 RAM shared_buffers, memory for sorting)
   when: "'{{db_config}}' == 'production'"
   blockinfile:
-    dest: /var/lib/postgresql/data/postgresql.conf
+    dest: "{{ imads.data_root }}/var/lib/postgresql/data/postgresql.conf"
     marker: "# {mark} ANSIBLE MANAGED BLOCK"
     content: |
       shared_buffers = 4GB
@@ -28,7 +28,7 @@
     net: "{{ imads.network }}"
     env: "{{ imads.env }}"
     volumes:
-      - /var/lib/postgresql/data:/var/lib/postgresql/data
+      - "{{ imads.data_root }}/var/lib/postgresql/data:/var/lib/postgresql/data"
     pull: always
     state: "{{db_state}}"
     restart_policy: always
