--- a/imads_webapp/tasks/main.yml
+++ b/imads_webapp/tasks/main.yml
@@ -3,19 +3,18 @@
   when: ansible_os_family == "RedHat"
 
 - name: Creates predictions data directory shared by portal and worker
-  file: path=/pred_data state=directory
+  file: path="{{ imads.data_root }}/pred_data" state=directory
 
 - name: Creates models directory
-  file: path=/pred_data/models state=directory
+  file: path="{{ imads.data_root }}/pred_data/models" state=directory
 
 - name: Creates models directory
-  file: path=/pred_data/work state=directory
+  file: path="{{ imads.data_root }}/pred_data/work" state=directory
 
 # Create database
-
 - include: tasks/setup_postgres.yml db_state=reloaded db_config=normal
 
-- stat: path=/pred_data/loaded.txt
+- stat: path="{{ imads.data_root }}/pred_data/loaded.txt"
   register: pred_data_loaded
 
 # Populate database
@@ -33,12 +32,12 @@
     detach: False
     volumes:
       - /etc/external/:/etc/external/
-      - /pred_data:/tmp/pred_data
+      - "{{ imads.data_root }}/pred_data:/tmp/pred_data"
     pull: always
 
 - name: Create finished loading text file
   when: pred_data_loaded.stat.isreg is not defined
-  command: touch /pred_data/loaded.txt
+  file: path="{{ imads.data_root }}/pred_data/loaded.txt" state=touch
 
 # Setup production database settings
 
