--- a/imads_webapp/tasks/setup_vacuum.yml
+++ b/imads_webapp/tasks/setup_vacuum.yml
@@ -9,7 +9,7 @@
     command: python vacuum.py 2880
     volumes:
       - /etc/external/:/etc/external/
-      - /pred_data:/tmp/pred_data
+      - "{{ imads.data_root }}/pred_data:/tmp/pred_data"
     pull: always
     state: reloaded
     restart_policy: always
