Adds privileged to worker so that it can access docker.sock

--- a/imads_webapp/tasks/setup_worker.yml
+++ b/imads_webapp/tasks/setup_worker.yml
@@ -9,6 +9,7 @@
     image: dukegcb/imads-worker
     net: "{{ imads.network }}"
     env: "{{ imads.env }}"
+    privileged: yes #privileged so that on RedHat with SELinux, container can access docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp:/tmp
