--- a/gpfs/tasks/main.yml
+++ b/gpfs/tasks/main.yml
@@ -1,20 +1,21 @@
 ---
 - name: Install base GPFS rpm
   yum:
-    name: gpfs.base
-    disablerepo: gcb-gpfs-updates
+    name: gpfs.base-4.1.1-0
+    state: present
+    update_cache: yes
 
 - name: Install GPFS rpms
   yum:
     name: gpfs.{{item}}
-    disablerepo: gcb-gpfs
     state: present
+    update_cache: yes
   with_items:
     - base.x86_64
     - docs.noarch
     - gpl.noarch
-    - gplbin-2.6.32-573.22.1.el6.x86_64.x86_64
     - msg.en_US.noarch
+    - gplbin-2.6.32-642.6.2.el6.x86_64-4.1.1-8.x86_64
 
 - name: Install Kernel devel
   yum: name={{ item }} state=present
@@ -31,3 +32,9 @@
   copy: src=gpfs.sh
         dest=/etc/profile.d/
         owner=root group=root mode=0644
+
+- name: copy authorized key for nsd servers
+  authorized_key:
+    user: root
+    key: "{{ lookup('file', lookup('env', 'HOME') + '/.ssh/nsd_id_rsa.pub') }}"
+
