--- a/ib/tasks/main.yml
+++ b/ib/tasks/main.yml
@@ -11,12 +11,11 @@
     - infiniband-diags
     - perftest
     - qperf
-    - opensm
+    - libibverbs-devel
 
 - name: Enable services for IB
   service: name={{ item }} enabled=yes
   with_items:
-    - opensm
     - rdma
 
 - name: Reboot
@@ -28,8 +27,10 @@
   ignore_errors: true
   when: (install_ib_packages == "changed") or (install_ib_group == "changed")
 
-- name: Waiting for server to come back 
+- name: Waiting for server to come back
   local_action: wait_for delay=15 host={{ inventory_hostname }}
-                state=started port=22    
+                state=started port=22
+  tags:
+    - reboot
 
 - debug: msg="System {{ inventory_hostname }} has come back from reboot"
